Bug 138727 - Help right-hand pane text doesn't auto flow to make all text visible
Summary: Help right-hand pane text doesn't auto flow to make all text visible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.3.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.0.5 target:7.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-08 01:26 UTC by Nick Levinson
Modified: 2021-02-03 09:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
offline Help's home page (104.41 KB, image/png)
2021-01-07 00:17 UTC, Nick Levinson
Details
Help's menu in DE's top panel (102.40 KB, image/png)
2021-01-07 00:26 UTC, Nick Levinson
Details
Screenshot of LO Help (513.36 KB, image/png)
2021-01-07 07:11 UTC, Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Levinson 2020-12-08 01:26:59 UTC
Description:
In the right-hand pane of Help, some text is beyond visibility. You need a kludge to see it. Most users won't think of that kludge.

Steps to Reproduce:
1. Either press F1 or select Help menu > LibreOffice Help.
2. LibreOffice Writer > Contents > Common Help Topics > General Information > General Glossary.
3. Click in the right pane (the glossary).
4. Select All.
5. Open a blank document.
6. Paste.
7. Compare what you see from pasting to what you see in the Help pane.

Actual Results:
Long lines contain text that is visible only in the document, because the pane does not support horizontal scrolling.

Long body length contains text that is visible only in the document, because the pane does not support vertical scrolling.

Expected Results:
Scroll support, both dimensions.


Reproducible: Always


User Profile Reset: No



Additional Info:
Reproducibility is likely always.

I don't seem to have a User Profile reset or an OpenGL option.
Comment 1 Dieter 2020-12-23 10:40:29 UTC
Nick, I can't find the help page you mention. Could you please paste link to that page here? Thank you.
Comment 2 Nick Levinson 2020-12-24 22:23:43 UTC
There's no link, at least in the sense of a URL. I replicated the STR without using an Internet connection.

However, I did make one error. (It shouldn't have affected you.) In STR, after Selecting All and before Open/New and pasting, I should have said to copy. Select All; copy; open/new; paste.
Comment 3 Ming Hua 2020-12-25 00:26:17 UTC
I suppose Nick was using locally installed offline help.

Using the STR from comment 0, I can reach the corresponding "General Glossary" page of the online 7.0 help:
https://help.libreoffice.org/7.0/en-US/text/shared/00/00000005.html
However here the page scrolls fine.

Nick, are you sure your local help is up-to-date?  How did you install it?  If you don't know or are not sure, please install the matching (7.0.3) version of help, either from TDF offical packages at https://www.libreoffice.org/download/download/?type=deb-x86_64&version=7.0.3&lang=en-US (.deb format) or https://www.libreoffice.org/download/download/?type=rpm-x86_64&version=7.0.3&lang=en-US (.rpm format), or from your Linux distro, and see if the problem still exists with the updated help?
Comment 4 Nick Levinson 2020-12-29 01:23:04 UTC
Web-based Help should operate differently, uses a 3-column layout and so does not have a right-hand pane, does not have its own scrolling because browsers do, and is not the subject of this bug report. I often have to work in LO without Internet access, such as on a train or in many neighborhoods I pass through, so I, and some others, need local Help.

The local Help is native to the LO installation. LO came with Fedora Linux. I most recently cleanly reinstalled (including auto-repartitioning) Fedora 32 and, by keeping it evergreen, it is now F33. LO is kept evergreen courtesy of keeping Fedora evergreen. Therefore, LO's local Help is as up to date as is the whole LO in whatever repositories the Fedora update process uses. LO Help is installed as part of LO, including updates. When updates are supplied, the Software app lists LO components (Writer, Calc, etc.) but, I think, does not separately list LO Help. Therefore, it is updated when a component, like Writer, is updated.

I considered your suggestion to install LO (I think the .rpm format goes with Fedora) but I don't want to overwrite the Help F33/LO supplies. Is there a way to do a test installation without disturbing the existing installation? Do you still need me to run a test like that?

I'm changing the status; change it back if desired.
Comment 5 Ming Hua 2020-12-29 13:21:22 UTC
(In reply to Nick Levinson from comment #4)
> Web-based Help should operate differently, uses a 3-column layout and so
> does not have a right-hand pane, does not have its own scrolling because
> browsers do, and is not the subject of this bug report. I often have to work
> in LO without Internet access, such as on a train or in many neighborhoods I
> pass through, so I, and some others, need local Help.
I perfectly understand the need of local offline help.  However saying online help "is not the subject of this bug report" is not exactly true.

Since quite a few versions ago (at latest 6.2), the offline help and online help have been combined.  Now LibreOffice offline help is just a bunch of HTML pages installed on your hard drive, opened in whatever HTML reader (usually a web browser) you set for your system.  You are supposed to see the same page in your offline help as the online one in comment 3.

Apparently it's not the case on your system.  Therefore I was trying to figure out why with my questions in comment 3.

> The local Help is native to the LO installation. LO came with Fedora Linux.
> I most recently cleanly reinstalled (including auto-repartitioning) Fedora
> 32 and, by keeping it evergreen, it is now F33. LO is kept evergreen
> courtesy of keeping Fedora evergreen. Therefore, LO's local Help is as up to
> date as is the whole LO in whatever repositories the Fedora update process
> uses. LO Help is installed as part of LO, including updates. When updates
> are supplied, the Software app lists LO components (Writer, Calc, etc.) but,
> I think, does not separately list LO Help. Therefore, it is updated when a
> component, like Writer, is updated.
So I assume your LO help is up-to-date.  Although you can always check the exact version of your help package.  I'm not familiar with Fedora and just looked up a random version 7.0.4.2-1.fc33 in the koji database:
https://koji.fedoraproject.org/koji/buildinfo?buildID=1657018
And there you can see the help package name is libreoffice-help-en.  I have no idea how to check the version of a specific package in Fedora though.

> I considered your suggestion to install LO (I think the .rpm format goes
> with Fedora) but I don't want to overwrite the Help F33/LO supplies. Is
> there a way to do a test installation without disturbing the existing
> installation? Do you still need me to run a test like that?
Since you are using LibreOffice provided by Fedora, there is no need to install RPM packages from TDF yet.  What I would like is to help you finding out why your offline HTML help files are displayed sub-optimally.

You said in comment 2 that there is no link or URL.  That's strange to me.  As I've said, usually it's a web browser that opens the help pages.  For example, on my Windows system, I open my offline help in Firefox and there is a URL like "file:///C:/Program Files/LibreOffice/help/en-US/text/swriter/main0000.html?System=WIN&DbPAR=WRITER".

Do you recognize what application was displaying the offline help for you?  If you don't recognize, can you attach a screenshot of the whole application showing the help page?

> I'm changing the status; change it back if desired.
Changing status is correct.  I set it to NEEDINFO when I ask questions or request information from you, so that other QA people don't need to spend time on this bug while we wait for your reply, which I'm also doing now.  Once you've answered the question or provided the information/document we asked for, you are expected to change it back, that's how Bugzilla works (but if you tend to forget, don't worry, there is an automatic process to change it back).
Comment 6 Nick Levinson 2021-01-07 00:09:15 UTC
After I had turned Wi-Fi off, not having wired Internet, and the computer not being connected to another, I shut down, waited at least 15 seconds (so RAM could fully flush), and cold-booted. I verified that Wi-Fi was still off. I started LO and opened LO Help via the Help menu, both successfully. I'm uploading screenshots of Help and of Help with the desktop's top panel's app's menu.

I don't see a hamburger menu or another way of finding a Help/About. Googling did not find a way to identify the offline Help version.

Fedora updates consider some things as separate (e.g., kernel, kernel-core, etc.) but some as together. All of LO is updated together. I don't have all of the modules or whatever they (Writer, Calc, etc.) are called (because I don't want all of them), so I don't have Impress, and yet my offline Help has a help chapter for Impress. Updates to Help are not context-sensitive. I don't know how to tell if an LO update is of Help alone, except perhaps by doing a lot of digging in the Document Foundation's patch and commit records, a method that would also reveal the latest version, at least by implication, of what was supplied in an update.

I assume Help content is coordinated between online and offline, but with online being updated more often and offline less so.
Comment 7 Nick Levinson 2021-01-07 00:17:22 UTC
Created attachment 168729 [details]
offline Help's home page
Comment 8 Nick Levinson 2021-01-07 00:26:03 UTC
Created attachment 168730 [details]
Help's menu in DE's top panel
Comment 9 Dieter 2021-01-07 07:10:31 UTC
(In reply to Nick Levinson from comment #7)
> Created attachment 168729 [details]
> offline Help's home page

This is not the actual Help from LO. It should looks like help in screenshot
Comment 10 Dieter 2021-01-07 07:11:15 UTC
Created attachment 168735 [details]
Screenshot of LO Help
Comment 11 Ming Hua 2021-01-07 07:50:22 UTC
(In reply to Dieter from comment #9)
> (In reply to Nick Levinson from comment #7)
> > Created attachment 168729 [details]
> > offline Help's home page
> 
> This is not the actual Help from LO. It should looks like help in screenshot
It may be a very old version of LO help.  Then again Nick said his system was a cleanly installed Fedora 32 which shouldn't have such old versions.

Unfortunately I don't know enough about Fedora to either search for which LO version was shipped with Fedora 32, or tell Nick how to check his LO help package version.
Comment 12 Dieter 2021-01-07 08:12:38 UTC
Nick, please try to install a version with actual version of LO Help, test again and paste also informations from Help => About LibreOffice

=> NEEDINFO
Comment 13 Ming Hua 2021-01-10 03:34:14 UTC
(In reply to Dieter from comment #12)
> Nick, please try to install a version with actual version of LO Help, test
> again and paste also informations from Help => About LibreOffice
Yes, I agree it would be nice if Nick could install an up-to-date (i.e. 7.0.3) help and test again.  However I'm not sure he knows how.

@Nick: As I've said, I know too little about Fedora to give you detailed guidance.  However I looked it up in Fedora's online documentation:
https://docs.fedoraproject.org/en-US/fedora/f33/system-administrators-guide/package-management/DNF/
...and I suggest you try the following command in a terminal before anything else:

$ dnf search libreoffice*

And if the output of the above command is too long, maybe try

$ dnf search libreoffice-help*

Hopefully that can shed some light on the current situation.
Comment 14 Nick Levinson 2021-01-11 23:47:11 UTC
This is surprising, since my Fedora laptop's LO is version 7.0.4.2 (later than what you suggest I install (comment 13)) and my Ubuntu laptop's LO 6.4 (on Ubuntu 20.04.1 LTS, kept evergreen) has a Help system that more resembles yours (comment 10) and has a URL that begins with file:///usr/share/libreoffice/ even when I had turned Wi-Fi off and restarted LO and Help. When I dug down in my Fedora filesystem usr/share/libreoffice/ was empty, so Fedora and Ubuntu store LO Help in different directories. Running a search across the whole file system for a Help phrase was taking hours and I gave up.

I hesitate to install software that is not in Fedora's system for installing apps, since that might lead to a software conflict. I got LO as part of Fedora's default installation and I assume Fedora's Software app would generate the same thing. Nonetheless, just to see what would be listed, I ran dnf search libreoffice* (per comment 13) and got this inter alia:

libreoffice-help-en.x86_64 : English help for LibreOffice

I found the same string when running dnf search libreoffice-help* and getting its lengthy output.

I don't know why, for either keyword, the output listed no other architecture for *help* and wonder if I'm getting a different Help format than you are because (perhaps) we're using different architectures, although I don't know why designers would want that to matter for Help's UI.

Instead of installing what dnf listed, I uninstalled all of LO's major apps that I had: Writer, Calc, and Base. I assumed no part of LO should still be on my system after that. Then, using Fedora's Software app, I reinstalled just Writer and got the Help I had before and that you said is not part of LO. Also, the blank Writer document had defaults I had set before the uninstallation. Then, I uninstalled Writer and I installed, again via the Software app, the single LO suite, which was only version 6.4. It didn't have Help and told me to download it separately from LO's website or from a repository or use online help. Fedora's Software app doesn't seem to offer LO Help separately. The default Writer document did not have my settings. Then, I uninstalled the LO suite and reinstalled just Writer, which was version 7.0.4.2 again. This time, likely because LO versions 6.4 and 7 store in different folders, before I reinstalled Calc and Base I checked with just Writer and saw I had my defaults back and the Help I had before but which you said is not part of LO.

So, I'm asking at Fedora's website to see if they're customizing LO Help (https://ask.fedoraproject.org/t/is-libreoffice-help-customized-for-fedora/11537). I didn't expect that they would go to the trouble, but maybe we'll find out.

If you know the address of 7.0.4.2 Help on my system, let me know so I can drill down into the folders and find it. Then I might find the Help version.

With the Help I have on my Fedora laptop: LO Writer > Help menu > About LibreOffice, both before and after the above uninstallation/reinstallation:

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 2; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The last reinstallation seems to have included Draw (not Impress) although I didn’t want it or select it. I made a Draw .odg document by inserting a QR code, saved it, and then tried to open it, but couldn't. I don't know if that's a feature or a symptom or if it's relevant to the Help issue.
Comment 15 Nick Levinson 2021-01-13 23:48:37 UTC
At https://ask.fedoraproject.org/t/is-libreoffice-help-customized-for-fedora/11537 the two replies so far (by one person) cast doubt that LO has a separate Help format on Fedora than it does for other distros. On their suggestion, I ran dnf info libreoffice-help-en in the CLI and got this:

Fedora Modular 33 - x86_64 - Updates             69 kB/s |  14 kB     00:00    
Fedora 33 - x86_64 - Updates                     87 kB/s |  16 kB     00:00    
Fedora 33 - x86_64 - Updates                                                                                                                      654 kB/s | 2.7 MB     00:04    
Installed Packages
Name         : libreoffice-help-en
Epoch        : 1
Version      : 7.0.4.2
Release      : 1.fc33
Architecture : x86_64
Size         : 26 M
Source       : libreoffice-7.0.4.2-1.fc33.src.rpm
Repository   : @System
From repo    : updates
Summary      : English help for LibreOffice
URL          : http://www.libreoffice.org/
License      : (MPLv1.1 or LGPLv3+) and LGPLv3 and LGPLv2+ and BSD and (MPLv1.1 or GPLv2 or LGPLv2 or Netscape) and Public Domain and ASL 2.0 and MPLv2.0 and CC0
Description  : Provides English help for LibreOffice.

When I ran rpm -qa libreoffice-help-en in the CLI, I got this:

libreoffice-help-en-7.0.4.2-1.fc33.x86_64
Comment 16 Nick Levinson 2021-01-15 00:59:53 UTC
In a Fedora update Wednesday night, libreoffice-help-en was listed at the end as 1:7.0.4.2-3.fc33 . After the update, LibreOffice Help looked the same as what I had reported with a screenshot.
Comment 17 Nick Levinson 2021-01-15 02:12:28 UTC
I reported the bug at https://bugzilla.redhat.com/show_bug.cgi?id=1916539 .
Comment 18 Caolán McNamara 2021-01-26 15:57:23 UTC
fedora is built with "--with-help build the old local help", and not "--with-help=online build the new HTML online help" or "--with-help=html build the new HTML local help"
Comment 19 Caolán McNamara 2021-01-27 13:04:03 UTC
its less the lack of a horizontal scrollbar and more that the text isn't flowing to fit the horizontal space as expected. The widget is clipped instead of resizing to fit the space available
Comment 20 Commit Notification 2021-01-27 14:15:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c79426288318b1dd52eff5b38d0e49f37e21b626

tdf#138727 help browser didn't flow text

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2021-01-27 15:45:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/cfdaa4fec60f010d325b5a261db9625394c75535

tdf#138727 help browser didn't flow text

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2021-01-27 15:45:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/a42e8da35681e5b3f944326bb175ff2ce05f5730

tdf#138727 help browser didn't flow text

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Nick Levinson 2021-02-02 22:58:27 UTC
My original complaint is now resolved, and sooner than comments above seem to predict. Thank you.

From Help/About LO:

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 2; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 24 Ming Hua 2021-02-03 09:58:46 UTC
(In reply to Nick Levinson from comment #23)
> My original complaint is now resolved, and sooner than comments above seem
> to predict. Thank you.
Since Caolán, the developer who fixed this issue, is also responsible for the RPM packages in Fedora, he likely also fixed this in the updated 7.0.4 Fedora packages, so you don't have to wait for 7.0.5.

Let's mark this as VERIFIED.  Thanks Caolán!