tdf#138727 help browser didn't flow text

because of its size request, while the paned shrink lets the pane shrink
below the size request the contents stay at a min of the size request
and aren't really shrunk, just clipped. Instead don't let the pane
shrink but don't set a size.request letting it shrink to its natural
min of its contents which are then truly resized so the text flow works.

Change-Id: Iaf6738ace28c82379ac6322310de9a22f9653473
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110014
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>